--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,40 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>RubyIntern2022ManagementExam</title>
+    <title><%= full_title yield :title%></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
-    <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <%= stylesheet_link_tag "custom", media: "all", "data-turbolinks-track": "reload" %>
+    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>
+    <script src="/assets/jquery.js" type="text/javascript"></script>
+    <script src="/assets/jquery_ujs.js" type="text/javascript"></script>
   </head>
 
   <body>
-    <%= yield %>
+    <nav class="navbar navbar-default navbar-static-top">
+      <div class="container">
+        <div class="navbar-header">
+          <%= link_to t(".home_name"), "#", class:"navbar-brand" %>
+        </div>
+        <div id="navbar" class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to t(".home"), "#" %></li>
+            <li><%= link_to t(".sign_up"), "#"  %></li>
+            <li><%= link_to t(".log_in"), "#" %></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <%= yield %>
+    </div>
+    <div class="footer">
+      <div class="container">
+        <p class="text-muted"><%= t(".change_language") %></p>
+        <%= link_to t(".english"), locale: :en %> |
+        <%= link_to t(".vietnamese"), locale: :vi %>
+      </div>
+    </div>
   </body>
 </html>
