--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="jumbotron">
   <h1 class="align-center"><%= t ".home_name" %></h1>
   <p class="align-center">
-    <%= link_to t(".sign_up_now"), "#", class:"btn btn-lg btn-primary" %>
+    <%= link_to t(".sign_up_now"), signup_path, class:"btn btn-lg btn-primary" %>
   </p>
 </div>
