--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -6,8 +6,9 @@
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
+  margin-top: 20px;
   width: 100%;
   height: 60px;
   background-color: #f5f5f5;
@@ -38,19 +39,12 @@ input {
   }
 }
 
-.field_with_errors {
-  @extend .has-error;
-  .form-control {
-    color: $state-danger-text;
-  }
-}
-
 .checkbox {
   margin-bottom: 10px;
   margin-top: 10px;
   span {
     font-weight: normal;
-    margin-left: 20px;
+    margin-left: 10px;
   }
 }
 
