--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,7 +2,7 @@
   <h1 class="align-center"><%= t ".home_name" %></h1>
   <p class="align-center">
     <% if logged_in? %>
-      <%= link_to t(".subject_path"), subjects_path, class:"btn btn-lg btn-primary" %>
+      <%= link_to t(".subject_list"), subjects_path, class:"btn btn-lg btn-primary" %>
     <% else %>
       <%= link_to t(".sign_up_now"), signup_path, class:"btn btn-lg btn-primary" %>
     <% end %>
