--- a/app/views/subjects/_form_subject.html.erb
+++ b/app/views/subjects/_form_subject.html.erb
@@ -1,4 +1,4 @@
-<div class="col-md-4" >
+<div class="col-md-4 m-w-200">
   <div class="jumbotron align-center card-image">
     <%= image_tag Settings.subject.link_image, class:"img-thumbnail img-responsive" %>
     <p class="subject-name"><%= subject.name %></p>
