--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -5,17 +5,17 @@
   <div class="col-md-6 col-md-offset-3">
     <%= form_for @user do |f| %>
       <%= render "shared/error_messages" %>
-      <%= f.label :name %>
+      <%= f.label :name, t(".name") %>
       <%= f.text_field :name %>
 
-      <%= f.label :email %>
+      <%= f.label :email, t(".email") %>
       <%= f.email_field :email %>
 
-      <%= f.label :password %>
+      <%= f.label :password, t(".password") %>
       <em><%= t ".password_require" %></em>
       <%= f.password_field :password %>
 
-      <%= f.label :password_confirmation, "Confirmation" %>
+      <%= f.label :password_confirmation, t(".password_confirmation") %>
       <%= f.password_field :password_confirmation %>
 
       <%= f.submit t(".submit"), class: "btn btn-primary" %>
