--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -11,9 +11,14 @@
 
   <body>
     <div>
-      <%= render "layouts/admin/header" %>
+      <%= render "layouts/header" %>
       <%= render "layouts/admin/sidebar" %>
+      <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
+        <% flash.each do |message_type, message| %>
+          <div class="alert alert-<%= message_type %>"><%= message %></div>
+        <% end %>
       <%= yield %>
+      </div>
     </div>
   </body>
 </html>
