--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,11 @@
  <nav class="navbar navbar-default navbar-static-top">
   <div class="container">
     <div class="navbar-header">
-      <%= link_to t(".home_name"), root_path, class:"navbar-brand" %>
+      <%= link_to t(".home_name"), home_page, class:"navbar-brand" %>
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
-        <li><%= link_to t(".home"), root_path %></li>
+        <li><%= link_to t(".home"), home_page %></li>
         <% if logged_in? %>
           <li><%= link_to t(".exams"), exams_path %></li>
           <li class="nav-item dropdown">
