--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -2,7 +2,7 @@
   <ul class="nav nav-sidebar align-left">
     <li><%= link_to t ".question" %></li>
     <li><%= link_to t ".exam" %></li>
-    <li><%= link_to t ".subject" %></li>
+    <li><%= link_to t(".subject"), admin_subjects_path %></li>
     <li><%= link_to (t".trainee"), admin_users_path %></li>
   </ul>
   <div class="footer">
