user create exam

--- a/app/views/exams/index.html.erb
+++ b/app/views/exams/index.html.erb
@@ -22,7 +22,7 @@
           <td></td>
           <td><%= exam.result_score %></td>
           <td>
-            <%= link_to t(".view"), "#", class:"btn btn-success button" %>
+            <%= link_to t(".start"), exam, class:"btn btn-success button" %>
           </td>
         </tr>
       <% end %>
