--- a/app/views/admin/admin_page/home.html.erb
+++ b/app/views/admin/admin_page/home.html.erb
@@ -1,40 +1,1 @@
-<% provide :title, t(".title") %>
-<!-- TODO LATER -->
-<h1 class="page-header">Exam list</h1>
-<div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Create time</th>
-        <th>Subject</th>
-        <th>Status</th>
-        <th>Duration</th>
-        <th>Score</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <td>28-02-2000 6:00</td>
-        <td>Ruby on Rails</td>
-        <td>Checked</td>
-        <td>30</td>
-        <td>28/30</td>
-      </tr>
-      <tr>
-        <td>19-05-1890 6:00</td>
-        <td>MySQL</td>
-        <td>Unchecked</td>
-        <td>20</td>
-        <td>16/20</td>
-      </tr>
-      <tr>
-        <td>01-06-2022 18:03</td>
-        <td>Git</td>
-        <td>Checked</td>
-        <td>20</td>
-        <td>15/20</td>
-      </tr>
-    </tbody>
-  </table>
-</div>
-<!-- END TODO -->
+<h1><%= t ".title" %></h1>
