--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -13,3 +13,57 @@
  *= require_tree ./admin/
  *= require_self
  */
+
+.sidebar {
+  background-color: #fff;
+  border-right: 1px solid #f5f5f5;
+}
+
+.content {
+  background-color: #f9fbfd;
+}
+
+.sidebar ul li {
+  border-bottom: 1px solid #eee;
+}
+
+.sidebar ul li:focus {
+  background-color: #4fc9da;
+}
+
+.align-center {
+  text-align: center;
+}
+
+.align-left {
+  text-align: left;
+}
+
+.flex {
+  display: flex !important ;
+}
+
+.flex-end {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.flex-col {
+  flex-direction: column;
+}
+
+.align-end {
+  align-items: end;
+}
+
+.m-20 {
+  margin: 20px;
+}
+
+.m-5 {
+  margin: 5px;
+}
+
+.m-l-5 {
+  margin-left: 5px;
+}
