--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -15,7 +15,7 @@
       <%= render "layouts/admin/sidebar" %>
       <div class="col-sm-9 col-sm-offset-3 col-md-10 col-md-offset-2">
         <% flash.each do |message_type, message| %>
-          <div class="alert alert-<%= message_type %>"><%= message %></div>
+          <div class="m-20 alert alert-<%= message_type %>"><%= message %></div>
         <% end %>
       <%= yield %>
       </div>
