--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -1,10 +1,9 @@
 <div class="col-sm-3 col-md-2 sidebar">
-  <ul class="nav nav-sidebar">
+  <ul class="nav nav-sidebar align-left">
     <li><%= link_to t ".question" %></li>
     <li><%= link_to t ".exam" %></li>
     <li><%= link_to t ".subject" %></li>
-    <li><%= link_to t ".trainee" %></li>
-
+    <li><%= link_to (t".trainee"), admin_users_path %></li>
   </ul>
   <div class="footer">
     <p class="text-muted"><%= t "layouts.footer.change_language" %></p>
