admin create question

--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -4,3 +4,9 @@ $bbb-color: #bbb;
 $red-color: red;
 $card-color: #f2f2f2;
 $subject-color: #595959;
+$fff-color: #fff;
+$f9fbfd-color: #f9fbfd;
+$eee-color: #eee;
+$blue-color: #4fc9da;
+$ccc-color: #ccc;
+$gray-color: #555555;
