--- a/app/views/exams/show.html.erb
+++ b/app/views/exams/show.html.erb
@@ -9,6 +9,6 @@
       <% end %>
     </ol>
     <%= hidden_field_tag :exam_id, params[:id] %>
-    <%= f.submit ".submit", class: "btn btn-primary" %>
+    <%= f.submit t(".submit"), class: "btn btn-primary" %>
   <% end %>
 </div>
