--- a/app/views/layouts/admin/_sidebar.html.erb
+++ b/app/views/layouts/admin/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <div class="col-sm-3 col-md-2 sidebar">
   <ul class="nav nav-sidebar align-left">
-    <li><%= link_to t ".question" %></li>
+    <li><%= link_to (t ".question"), admin_questions_path %></li>
     <li><%= link_to t ".exam" %></li>
     <li><%= link_to t(".subject"), admin_subjects_path %></li>
     <li><%= link_to (t".trainee"), admin_users_path %></li>
