--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -14,22 +14,27 @@
  *= require_self
 
  */
+@import "color.scss";
+
+a {
+  text-decoration: none !important;
+}
 
 .sidebar {
-  background-color: #fff;
-  border-right: 1px solid #f5f5f5;
+  background-color: $fff-color;
+  border-right: 1px solid $footer-color;
 }
 
 .content {
-  background-color: #f9fbfd;
+  background-color: $f9fbfd-color;
 }
 
 .sidebar ul li {
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid $eee-color;
 }
 
 .sidebar ul li:focus {
-  background-color: #4fc9da;
+background-color: $blue-color;
 }
 
 .align-center {
@@ -49,8 +54,16 @@
   justify-content: flex-end;
 }
 
+.flex-col-rev {
+  flex-direction: column-reverse;
+}
+
 .flex-col {
   flex-direction: column;
+}
+
+.w-25 {
+  width: 25px;
 }
 
 .align-end {
@@ -67,4 +80,39 @@
 
 .m-l-5 {
   margin-left: 5px;
+}
+
+input,
+textarea,
+select,
+.uneditable-input {
+  border: 1px solid $bbb-color;
+  width: 100%;
+  margin-bottom: 15px;
+  box-sizing: border-box;
+  background-color: $fff-color;
+}
+
+.row select {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: $gray-color;
+  background-color: $fff-color;
+  background-image: none;
+  border: 1px solid $ccc-color;
+  border-radius: 4px;
+}
+
+.form-question {
+  position: relative;
+}
+
+.btn-submit {
+  position: absolute;
+  bottom: -50px;
+  width: 100%;
 }
