--- a/app/assets/stylesheets/admin.scss
+++ b/app/assets/stylesheets/admin.scss
@@ -15,6 +15,7 @@
 
  */
 @import "color.scss";
+@import "libcss";
 
 a {
   text-decoration: none !important;
@@ -34,52 +35,7 @@ a {
 }
 
 .sidebar ul li:focus {
-background-color: $blue-color;
-}
-
-.align-center {
-  text-align: center;
-}
-
-.align-left {
-  text-align: left;
-}
-
-.flex {
-  display: flex !important ;
-}
-
-.flex-end {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.flex-col-rev {
-  flex-direction: column-reverse;
-}
-
-.flex-col {
-  flex-direction: column;
-}
-
-.w-25 {
-  width: 25px;
-}
-
-.align-end {
-  align-items: end;
-}
-
-.m-20 {
-  margin: 20px;
-}
-
-.m-5 {
-  margin: 5px;
-}
-
-.m-l-5 {
-  margin-left: 5px;
+  background-color: $blue-color;
 }
 
 input,
