--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav navbar-right">
         <li><%= link_to t(".home"), home_page %></li>
-        <% if logged_in? %>
+        <% if user_signed_in? %>
           <li><%= link_to t(".exams"), exams_path %></li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDarkDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -19,8 +19,8 @@
             </ul>
           </li>
         <% else %>
-          <li><%= link_to t(".sign_up"), signup_path %></li>
-          <li><%= link_to t(".log_in"), login_path %></li>
+          <li><%= link_to t(".sign_up"), new_user_registration_path %></li>
+          <li><%= link_to t(".log_in"), new_user_session_path %></li>
         <% end %>
       </ul>
     </div>
