--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 <% provide :title, t(".title") %>
 <h1 class="page-header"><%= t ".user_list" %></h1>
-<div class="flex-end">
+<div>
   <%= render "search" %>
 </div>
 <div class="table-responsive">
