--- a/app/assets/stylesheets/libcss.scss
+++ b/app/assets/stylesheets/libcss.scss
@@ -23,6 +23,10 @@
   flex-direction: column;
 }
 
+.flex-space-between {
+  justify-content: space-between;
+}
+
 .w-25 {
   width: 25px;
 }
@@ -39,10 +43,18 @@
   margin: 5px;
 }
 
-.m-b-5{
+.m-b-5 {
   margin-bottom: 5px;
 }
 
 .m-l-5 {
   margin-left: 5px;
+}
+
+.m-r-5 {
+  margin-right: 5px;
+}
+
+.s-16 {
+  font-size: 16px;
 }
