--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -1,7 +1,7 @@
 <div class="align-center">
-  <%= form_tag subjects_path, class:"navbar-form", method: "get", remote: :true do %>
+  <%= search_form_for @search, class:"navbar-form", remote: true do |f| %>
     <div class="input-group">
-      <%= text_field_tag :name, params[:name], class:"form-control" %>
+      <%= f.search_field :name_cont, class:"form-control" %>
       <div class="input-group-btn">
         <%= button_tag(type: :submit, class: "btn btn-default") do %>
           <i class="glyphicon glyphicon-search"></i>
