add gem ransack

--- a/app/views/admin/users/_search.html.erb
+++ b/app/views/admin/users/_search.html.erb
@@ -1,10 +1,18 @@
-<div class="align-center">
-  <%= search_form_for [:admin, @search], class:"navbar-form" do |f| %>
+<div class="align-center ">
+  <%= search_form_for [:admin, @search], class:"navbar-form flex flex-space-between ", remote: true do |f| %>
+    <div class="flex align-end">
+      <i class="fa-solid fa-filter s-16 m-r-5"></i>
+      <%= sort_link @search, :created_at, t(".created_at") %>
+    </div>
     <div class="input-group flex align-end">
       <div class="flex">
         <div class="flex flex-col align-left">
-          <%= label :name, t(".search_name") %>
+          <%= label :name, t(".search_name_and_email") %>
           <%= f.search_field :name_or_email_cont, class:"form-control" %>
+        </div>
+        <div class="flex flex-col align-left m-l-5">
+          <%= label :name, t(".search_created_date") %>
+          <%= f.date_field :created_at_eq, class:"form-control" %>
         </div>
       </div>
       <div class="flex">
