--- a/app/views/admin/users/_search.html.erb
+++ b/app/views/admin/users/_search.html.erb
@@ -1,24 +1,20 @@
 <div class="align-center">
-  <%= form_tag admin_users_path, class:"navbar-form", remote: true, method: :get do %>
+  <%= search_form_for [:admin, @search], class:"navbar-form" do |f| %>
     <div class="input-group flex align-end">
       <div class="flex">
         <div class="flex flex-col align-left">
           <%= label :name, t(".search_name") %>
-          <%= text_field_tag :name, params[:name], class:"form-control" %>
-        </div>
-        <div class="flex flex-col align-left m-l-5">
-          <%= label :name, t(".search_email") %>
-          <%= text_field_tag :email, params[:email], class:"form-control" %>
+          <%= f.search_field :name_or_email_cont, class:"form-control" %>
         </div>
       </div>
       <div class="flex">
         <div class="flex flex-col align-left m-l-5">
           <%= label :name, t(".starte_date") %>
-          <%= date_field_tag :start_date, nil, max: Date.today, class:"form-control"%>
+          <%= f.date_field :by_start_date, class:"form-control" %>
         </div>
         <div class="flex flex-col align-left m-l-5">
           <%= label :name, t(".end_date") %>
-          <%= date_field_tag :end_date, nil, max: Date.today, class:"form-control" %>
+          <%= f.date_field :by_end_date, class:"form-control" %>
         </div>
       </div>
       <div class="input-group-btn m-l-5">
