--- a/app/assets/stylesheets/libcss.scss
+++ b/app/assets/stylesheets/libcss.scss
@@ -59,6 +59,18 @@
   margin-right: 5px;
 }
 
+.m-20 {
+  margin: 20px;
+}
+
+.m-b-20 {
+  margin-bottom: 20px;
+}
+
 .s-16 {
   font-size: 16px;
+}
+
+.w-200 {
+  width: 200px;
 }
