--- a/app/views/admin/questions/_option_fields.html.erb
+++ b/app/views/admin/questions/_option_fields.html.erb
@@ -1,6 +1,6 @@
 <div class="nested-fields">
   <div>
-    <%= f.label :description, t(".answer") %>
+    <%= f.label :description, t(".answer"), class: "required" %>
     <%= f.text_field :description, class: "form-control" %>
   </div>
   <div class="flex">
