--- a/app/views/admin/questions/new.html.erb
+++ b/app/views/admin/questions/new.html.erb
@@ -1,5 +1,5 @@
 <% provide :title, t(".title") %>
-
+<%= render "error_messages" %>
 <h1><%= t ".title" %></h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
