--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -4,7 +4,7 @@
     <% if user_signed_in? %>
       <%= link_to t(".subject_list"), subjects_path, class:"btn btn-lg btn-primary" %>
     <% else %>
-      <%= link_to t(".sign_up_now"), signup_path, class:"btn btn-lg btn-primary" %>
+      <%= link_to t(".sign_up_now"), new_user_registration_path, class:"btn btn-lg btn-primary" %>
     <% end %>
   </p>
 </div>
