--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -156,3 +156,17 @@ input {
   font-size: 25px;
   font-weight: 500;
 }
+
+.timer {
+  position: absolute;
+  right: 50px;
+  font-size: 20px;
+  border: 1px solid;
+  background-color: $ddd-color;
+  width: 150px;
+}
+
+.countdown {
+  font-size: 25px;
+  font-weight: 500;
+}
