--- a/app/assets/stylesheets/color.scss
+++ b/app/assets/stylesheets/color.scss
@@ -10,3 +10,10 @@ $eee-color: #eee;
 $blue-color: #4fc9da;
 $ccc-color: #ccc;
 $gray-color: #555555;
+$a94442-color: #a94442;
+$f2dede-color: #f2dede;
+$ebccd1-color: #ebccd1;
+$green-color: #3c763d;
+$dff0d8-color: #dff0d8;
+$d6e9c6-color: #d6e9c6;
+$ddd-color: #ddd;
