--- a/app/assets/stylesheets/libcss.scss
+++ b/app/assets/stylesheets/libcss.scss
@@ -10,6 +10,10 @@
   display: flex !important ;
 }
 
+.flex-center {
+  justify-content: center;
+}
+
 .flex-end {
   display: flex;
   justify-content: flex-end;
