--- a/app/views/subjects/index.html.erb
+++ b/app/views/subjects/index.html.erb
@@ -1,7 +1,4 @@
 <%= render "layouts/search" %>
-<div class="align-center">
-  <%== pagy_bootstrap_nav @pagy %>
-</div>
 <div id="subject">
-  <%= render partial: "form_subject",  collection: @subjects, as: :subject %>
+  <%= render partial: "form_subject" %>
 </div>
